delete client builder before d-pointer of KXMLGUIClient is killed

BUG: 432421