src/session/SessionController.h
@@ -17,6 +17,8 @@
 // KDE
 #include <KXMLGUIClient>
 
+#include <memory>
+
 // Konsole
 #include "SessionDisplayConnection.h"
 #include "ViewProperties.h"
@@ -357,6 +359,7 @@ private:
     bool _monitorProcessFinish;
     EscapeSequenceUrlFilter *_escapedUrlFilter;
 
+    std::unique_ptr<KXMLGUIBuilder> _clientBuilder;
 };
 
 }
